fix: design adjustments (#109)
* semantic html for footer and header
* footer size adjustment
* truncate long org names in jobResults
* increase list item spacing

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -12,7 +12,7 @@
         box-sizing: border-box;
         max-width: var(--site-container-size);
         min-height: 100%;
-        padding: var(--spacing-normal);
+        padding: var(--spacing-3x) 0;
         margin: auto;
         display: flex;
         justify-content: space-between;
