--- a/src/themes/oneui/base-variables/_header_footer.scss
+++ b/src/themes/oneui/base-variables/_header_footer.scss
@@ -6,7 +6,7 @@ $header-height: 50px !default;
 // Footer variables
 $footer-background-color: var(--color-accent) !default;
 $footer-foreground-color: var(--color-background) !default;
-$footer-height: 70px !default;
+$footer-height: 100px !default;
 
 // navigation bar
 $navigation-height: 48px !default;
